@@ -5,6 +5,7 @@ Bower 0.11-unreleased
   searched for in the index view.
 * compose: Allow non-UTF-8 "text" files to be attached by using
   base64 transfer encoding.
+* Add ui.wrap_width option to wrap message lines before terminal width.
 
 Bower 0.10 (2019-01-26)
 =======================
